# EntityMatchingModel

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGES.md  NOTICE  README.md  example.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/sphinx/: README.rst  autogenerate.sh
docs/sphinx/source/: api_index.rst  conf.py  emm.aggregation.rst  emm.base.rst  emm.data.rst  emm.features.rst  emm.helper.rst  emm.indexing.rst  emm.loggers.rst  emm.pipeline.rst  emm.preprocessing.rst  emm.rst  emm.supervised_model.rst  emm.threshold.rst  fitting.rst  index.rst  overview.rst  parameters.rst  persistence.rst  pipeline.rst  spark.rst
emm/: __init__.py  parameters.py  resources.py  version.py
emm/aggregation/: __init__.py  base_entity_aggregation.py  pandas_entity_aggregation.py  spark_entity_aggregation.py
emm/base/: module.py  pipeline.py
emm/data/: README.md  __init__.py  create_data.py  negative_data_creation.py  noiser.py  prepare_name_pairs.py
emm/features/: __init__.py  base_feature_extractor.py  features_extra.py  features_lef.py  features_name.py  features_rank.py  features_vocabulary.py  pandas_feature_extractor.py
emm/helper/: __init__.py  blocking_functions.py  custom_path.py  io.py  sklearn_pipeline.py  spark_custom_reader_writer.py  spark_ml_pipeline.py  spark_utils.py  util.py
emm/indexing/: __init__.py  base_indexer.py  pandas_candidate_selection.py  pandas_cos_sim_matcher.py  pandas_naive_indexer.py  pandas_normalized_tfidf.py  pandas_sni.py  spark_candidate_selection.py  spark_character_tokenizer.py  spark_cos_sim_matcher.py  spark_indexing_utils.py  spark_normalized_tfidf.py  spark_sni.py  spark_word_tokenizer.py
emm/loggers/: __init__.py  logger.py  timer.py
emm/pipeline/: __init__.py  base_entity_matching.py  pandas_entity_matching.py  spark_entity_matching.py
emm/preprocessing/: __init__.py  abbreviation_util.py  base_name_preprocessor.py  functions.py  pandas_functions.py  pandas_preprocessor.py  spark_functions.py  spark_preprocessor.py
emm/supervised_model/: __init__.py  base_supervised_model.py  pandas_supervised_model.py  spark_supervised_model.py
emm/threshold/: threshold_decision.py
notebooks/: 01-entity-matching-pandas-version.ipynb  02-entity-matching-spark-version.ipynb  03-entity-matching-training-pandas-version.ipynb  04-entity-matching-aggregation-pandas-version.ipynb
tests/: conftest.py  utils.py
tests/benchmark/: test_bench.py
tests/integration/: test_artificial_integration.py  test_em_add_model.py  test_entity_matching.py  test_indexers.py  test_normalized_tfidf.py  test_pandas_em.py  test_readme_example.py  test_spark_vs_pandas.py  test_supervised.py  test_training_classifier.py
tests/notebooks/: test_notebooks.py
tests/unit/: test_abbreviations.py  test_carry_on_cols.py  test_commonshorthands.py  test_cos_sim_matcher.py  test_custom_path.py  test_data.py  test_entity_aggregation.py  test_feature_extractor.py  test_features_abbreviations.py  test_features_lef.py  test_features_vocabulary.py  test_name_preprocessing.py  test_negative_sample_creation.py  test_serialization.py  test_threshold_decision.py  test_timer.py  test_util.py
